# pico-celery

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  manage.sh  mkdocs.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  sync-keywords.yml
docs/: architecture.md  faq.md  getting-started.md  index.md  llms.txt  requirements.txt  skills.md  troubleshooting.md
docs/how-to/: periodic-tasks.md  retry.md  testing.md
docs/reference/: index.md
examples/worker-client/: README.md  client.py  config.yml  requirements.txt  tasks.py  worker.py
releases/: description.md  labels.md  v0.1.1.md  v0.2.0.md  v0.2.1.md  v0.2.2.md
src/pico_celery/: __init__.py  client.py  config.py  decorators.py  factory.py  registrar.py
tests/: conftest.py  test_client_coverage.py  test_coverage_boost_v2.py  test_factory_app.py  test_full_e2e.py  test_integrated.py  test_integrated_celery.py  test_registrar_coverage.py  test_registrar_registration.py  test_send_task.py  test_task_decorator.py  user_components.py
