[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-celery"
dynamic = ["version"]
authors = [{ name = "David Perez Cabrera", email = "dperezcabrera@gmail.com" }]
description = "Async-first Celery integration for Pico-IoC. Enables defining Celery tasks as async methods on IoC-managed components, with automatic discovery, dependency injection, and container-scoped execution."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "ioc", 
    "di", 
    "dependency injection", 
    "celery", 
    "inversion of control", 
    "spring boot",
    "controller"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


dependencies = [
    "pico-ioc >= 2.2.0", 
    "celery>=5.3,<6.0",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/dperezcabrera/pico-celery"
Documentation = "https://dperezcabrera.github.io/pico-celery/"
Repository = "https://github.com/dperezcabrera/pico-celery"
Changelog = "https://github.com/dperezcabrera/pico-celery/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/dperezcabrera/pico-celery/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pico_celery*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.2.0"
write_to = "src/pico_celery/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "UP", "C901", "PLR1702"]
ignore = [
    "E501",
    "E701",
    "E731",
    "F401",
    "F811",
    "UP006",
    "UP007",
    "UP035",
    "UP045",
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]

[tool.ruff.format]
quote-style = "double"

[project.entry-points."pico_boot.modules"]
pico_celery = "pico_celery"

